--- a/Checkout.extension.style.scss
+++ b/Checkout.extension.style.scss
@@ -31,6 +31,20 @@
         position: relative;
         z-index: 2;
     }
+    .stepper-checked{
+        border-radius: 80%;
+        text-align: center;
+        width: 50px;
+        height: 50px;
+        margin: 1rem ;
+        padding:3px;
+        color: #fff;
+        font-size: 2rem;
+        border: 10px #fff solid;
+        position: relative;
+        z-index: 2;
+        background: #A82222;
+    }
     .stepper-line-active{
         height: 6px;
         position: absolute;
